--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>fi.yle.tools</groupId>
+  <groupId>com.x2iq.tools</groupId>
   <artifactId>aws-maven</artifactId>
   <packaging>jar</packaging>
   <version>1.4.2</version>
@@ -189,7 +189,7 @@
     </plugins>
     <extensions>
       <extension>
-        <groupId>fi.yle.tools</groupId>
+        <groupId>com.x2iq.tools</groupId>
         <artifactId>aws-maven</artifactId>
         <version>1.4.0</version>
       </extension>
