Move maven central distributionManagement block to own profile.

--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,7 @@
           <configuration>
             <profiles>
               <profile>release-profile</profile>
+              <profile>ossrh</profile>
             </profiles>
           </configuration>
         </plugin>
@@ -203,17 +204,6 @@
     </developer>
   </developers>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
-
   <profiles>
     <profile>
       <id>release-profile</id>
@@ -235,6 +225,19 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>ossrh</id>
+      <distributionManagement>
+        <snapshotRepository>
+          <id>ossrh</id>
+          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+          <id>ossrh</id>
+          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+      </distributionManagement>
     </profile>
   </profiles>
 
