--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,19 @@
         </repository>
       </distributionManagement>
     </profile>
+    <profile>
+      <id>github</id>
+      <distributionManagement>
+        <snapshotRepository>
+          <id>github</id>
+          <url>https://maven.pkg.github.com/2iq/aws-maven</url>
+        </snapshotRepository>
+        <repository>
+          <id>github</id>
+          <url>https://maven.pkg.github.com/2iq/aws-maven</url>
+        </repository>
+      </distributionManagement>
+    </profile>
   </profiles>
 
 </project>
