--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,9 @@
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.2.0</version>
+          <configuration>
+            <source>7</source>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
